[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygleif"
description = "Query the GLEIF API using Python"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "ggravlingen", email = "no@email.com"},
]
dynamic = ['version']
dependencies    = [
    "httpx2>=2.4.0",
    "pydantic>2,<3",
]
keywords = ["lei-code", "lei", "api", "gleif", "leicode"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Financial and Insurance Industry",
]

[project.urls]
"Source Code" = "https://github.com/ggravlingen/pygleif"

[project.scripts]
pygleif = "pygleif.__main__:main"

[dependency-groups]
dev = [
    "coverage>=7.10",
    "pre-commit>=4.3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
    "ruff>=0.13",
    "ty==0.0.56",
    "zizmor>=1.26.1",
]
# Test-matrix groups. pygleif targets pydantic v2 (>2,<3); the frozen v1
# models construct via the bundled ``pydantic.v1`` shim, so every group
# installs pydantic v2. The v2/compat suites run fully offline.
py313-v2 = [
    "pydantic>2,<3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
]
py314-v2 = [
    "pydantic>2,<3",
    "pytest>=8.4",
    "pytest-cov>=7.0",
]
docs = [
    "furo>=2024.8",
    "myst-parser>=4.0",
    "sphinx>=8.0",
]

[tool.setuptools]
include-package-data = true
platforms = ["any"]
zip-safe = false

[tool.setuptools.dynamic]
version = {file = "pygleif/VERSION"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests*"]

[tool.setuptools.package-data]
"pygleif" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
    "testing_config",
]

[tool.ruff]
exclude = [
    "tests",
    "docs",
]

target-version = "py313"

lint.select = [
    "ALL"
]

line-length = 88

lint.ignore = [# One of these is to be disabled..
          "D213", # See https://github.com/charliermarsh/ruff/issues/2281
          #"D212", # See https://github.com/charliermarsh/ruff/issues/2281

          "D203", # See https://github.com/charliermarsh/ruff/issues/2281
          #"D211", # See https://github.com/charliermarsh/ruff/issues/2281
]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

[tool.ruff.lint.pydocstyle]
convention = 'pep257'

[tool.ruff.lint.isort]
# will group `import x` and `from x import` of the same module.
combine-as-imports = true
force-sort-within-sections = true
forced-separate = [
  "tests",
]
known-first-party = [
  "pygleif",
  "tests",
]

[tool.ty.environment]
python-version = "3.13"
